PostGIS 3.1.0beta1
2020/xx/xx
Only tickets not included in 3.1.0alpha2

* Breaking changes *
  - #4737, Bump minimum protobuf-c requirement to 1.1.0 (Raúl Marín)

* New features *
  - #4698, Add a precision parameter to ST_AsEWKT (Raúl Marín)
  - GEOS 3.9

* Enhancements *
  - Make ST_Subdivide interruptable (Sandro Santilli)
  - #4660, Changes in double / coordinate printing (Raúl Marín)
        - Use the shortest representation (enough to guarantee roundtrip).
        - Uses scientific notation for absolute numbers smaller than 1e-8.
          The previous behaviour was to output 0 for absolute values smaller than
          1e-12 and fixed notation for anything bigger than that.
        - Uses scientific notation for absolute numbers greater than 1e+15 (same behaviour).
        - The precision parameter now also affects the scientific notation (before it was fixed [5-8]).
        - All output functions now respect the requested precision (without any limits).
        - The default precision is the same (9 for GeoJSON, 15 for everything else).
  - #4729, WKT/KML: Print doubles directly into stringbuffers (Raúl Marín)
  - #4533, Use the standard coordinate printing system for box types (Raúl Marín)
  - #4686, Avoid decompressing geographies when possible (Raúl Marín)
           Affects ANALYZE, _ST_PointOutside, postgis_geobbox, ST_CombineBbox(box2d, geometry),
           ST_ClipByBox2D when the geometry is fully inside or outside the bbox and
           ST_BoundingDiagonal.
  - #4741, Don't use ST_PointInsideCircle if you need indexes, use ST_DWithin instead.
           Documentation adjusted (Darafei Praliaskouski)
  - #4737, Improve performance and reduce memory usage in ST_AsMVT, especially in
           queries involving parallelism (Raúl Marín)
  - #4746, Micro optimizations to the serialization process (Raúl Marín)
  - #4719, Fail fast when srids don't match ST_Intersection(geometry,raster)
            Also schema qualify calls in function. (Regina Obe)
