@@ -26,7 +26,7 @@
 #include "geobuf.h"
 #include "pgsql_compat.h"
 
-#if defined HAVE_LIBPROTOBUF && defined HAVE_GEOBUF
+#if defined HAVE_LIBPROTOBUF
 
 #define FEATURES_CAPACITY_INITIAL 50
 #define MAX_PRECISION 1e6
